重构下getenv，只剩下chatserver.secret  chatserver.config 两个配置