@@ -1,6 +1,6 @@
 package chatserver;
 
-import com.google.common.base.Strings;
+import chatserver.security.Secrets;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
@@ -8,34 +8,31 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.logging.Logger;
 
 @Configuration
 public class StaticResourceConfig implements WebMvcConfigurer {
 
     private static final Logger logger = Logger.getLogger(StaticResourceConfig.class.getName());
+
     @Override
     public void addResourceHandlers(@NotNull ResourceHandlerRegistry registry) {
-        String resourcePath = System.getenv("static_dir");
-        String headIconPath = System.getenv("head_dir");
-        if (Strings.isNullOrEmpty(resourcePath)) {
-            try {
-                Files.createFile(Path.of("./static"));
-            } catch (IOException e) {
-                //throw new RuntimeException(e);
-            }
-            resourcePath = "./static";
+        String resourcePath = Secrets.DATA_STATIC_DIR;
+        String headIconPath = Secrets.DATA_HEAD_ICON_DIR;
+
+        try {
+            Files.createDirectories(Paths.get(resourcePath));
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
 
-        if (Strings.isNullOrEmpty(headIconPath)) {
-            try {
-                Files.createFile(Path.of("./head"));
-            } catch (IOException e) {
-                //throw new RuntimeException(e);
-            }
-            headIconPath = "./head";
+        try {
+            Files.createDirectories(Paths.get(headIconPath));
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
+
         registry.addResourceHandler("/static/**")
                 .addResourceLocations("file:" + resourcePath + "/");
         logger.info("register static path " + resourcePath);
